resources/minio/minio-http-proxy.in.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: minio-ml-httpproxy
  namespace: minio-ml
spec:
  routes:
    - conditions:
        - prefix: /
      services:
        - name: minio
          port: 9000
  virtualhost:
    fqdn: ${MLFLOW_S3_ENDPOINT_FQDN}
